# gambit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
gambit/: __init__.py
gambit/arena/: __init__.py  vs_stockfish.py
gambit/board/: __init__.py  encoder.py
gambit/engine/: __init__.py  uci.py
gambit/mcts/: __init__.py  mcts.py
gambit/network/: __init__.py  resnet.py
gambit/train/: selfplay.py  supervised.py
scripts/: download_lichess.sh  play.py  run_phase1.py  run_pipeline.py  train_selfplay.py  train_supervised.py
tests/: test_board.py  test_mcts.py  test_network.py
