[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gambit"
version = "0.1.0"
description = "AlphaZero-style chess engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "chess>=1.10.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "tqdm>=4.65.0",
    "stockfish>=3.28.0",
    "requests>=2.31.0",
    "zstandard>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
gambit-uci = "gambit.engine.uci:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gambit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
